Fixed CSS Styling issue where there are no gap between questions

--- a/experimental/loopTest/style.css
+++ b/experimental/loopTest/style.css
@@ -49,6 +49,12 @@ header {
     gap: 32px;
 }
 
+.questions-container {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
 .question-block {
     display: flex;
     flex-direction: column;
